--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "phonegap-plugin-barcodescanner",
-  "version": "8.0.0",
-  "description": "You can use the BarcodeScanner plugin to scan different types of barcodes (using the device's camera) and get the metadata encoded in them for processing within your application.",
+  "name": "@cocodintech/phonegap-plugin-barcodescanner",
+  "version": "1.0.0",
+  "description": "BarcodeScanner plugin is a fork of the original phonegap-plugin-barcodescanner, adapted for cordova-android 12.0.0. It allows scanning various barcode types using the device's camera and extracting encoded metadata for in-app processing.",
   "cordova": {
     "id": "phonegap-plugin-barcodescanner",
     "platforms": [
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/phonegap/phonegap-plugin-barcodescanner.git"
+    "url": "https://github.com/cocodintechnology/phonegap-plugin-barcodescanner"
   },
   "keywords": [
     "ecosystem:cordova",
@@ -25,29 +25,14 @@
     "cordova:plugin"
   ],
   "engines": {
-    "cordovaDependencies": {
-      "<7.0.0": {
-        "cordova-android": "<6.3.0"
-      },
-      "7.0.0": {
-        "cordova-android": ">=6.3.0"
-      },
-      "7.1.0": {
-        "cordova-android": ">=6.3.0",
-        "cordova": ">=7.1.0"
-      },
-      "8.0.0": {
-        "cordova-android": ">=6.3.0",
-        "cordova": ">=7.1.0"
-      }
-    }
+    "cordova-android": ">=10.0.0 <=12.0.0"
   },
   "author": "Adobe PhoneGap Team",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/phonegap/phonegap-plugin-barcodescanner/issues"
+    "url": "https://github.com/cocodintechnology/phonegap-plugin-barcodescanner/issues"
   },
-  "homepage": "https://github.com/phonegap/phonegap-plugin-barcodescanner#readme",
+  "homepage": "https://github.com/cocodintechnology/phonegap-plugin-barcodescanner#readme",
   "scripts": {
     "test": "jasmine-node --color spec"
   },
