--- a/plugin.xml
+++ b/plugin.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:rim="http://www.blackberry.com/ns/widgets" id="phonegap-plugin-barcodescanner" version="8.0.0">
   <name>BarcodeScanner</name>
-  <description>You can use the BarcodeScanner plugin to scan different types of barcodes (using the device's camera) and get the metadata encoded in them for processing within your application.</description>
+  <description>BarcodeScanner plugin is a fork of the original phonegap-plugin-barcodescanner, adapted for cordova-android 12.0.0. It allows scanning various barcode types using the device's camera and extracting encoded metadata for in-app processing.</description>
   <license>MIT</license>
-  <repo>https://github.com/phonegap/phonegap-plugin-barcodescanner</repo>
-  <issue>https://github.com/phonegap/phonegap-plugin-barcodescanner/issues</issue>
+  <repo>https://github.com/cocodintechnology/phonegap-plugin-barcodescanner</repo>
+  <issue>https://github.com/cocodintechnology/phonegap-plugin-barcodescanner</issue>
   <engines>
     <engine name="cordova" version=">=7.1.0"/>
     <engine name="cordova-android" version=">=6.3.0"/>
